@@ -30,6 +30,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|net
+operator|.
+name|ConnectException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|ArrayList
@@ -93,6 +103,26 @@ operator|.
 name|impl
 operator|.
 name|HttpSolrServer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|impl
+operator|.
+name|HttpSolrServer
+operator|.
+name|RemoteSolrException
 import|;
 end_import
 
@@ -565,14 +595,14 @@ operator|=
 literal|true
 expr_stmt|;
 block|}
-comment|// if its an ioexception, lets try again
+comment|// if its a connect exception, lets try again
 if|if
 condition|(
 name|err
 operator|.
 name|e
 operator|instanceof
-name|IOException
+name|ConnectException
 condition|)
 block|{
 name|doRetry
@@ -604,7 +634,47 @@ operator|.
 name|getRootCause
 argument_list|()
 operator|instanceof
-name|IOException
+name|ConnectException
+condition|)
+block|{
+name|doRetry
+operator|=
+literal|true
+expr_stmt|;
+block|}
+block|}
+elseif|else
+if|if
+condition|(
+name|err
+operator|.
+name|e
+operator|instanceof
+name|RemoteSolrException
+condition|)
+block|{
+name|Exception
+name|cause
+init|=
+operator|(
+name|RemoteSolrException
+operator|)
+name|err
+operator|.
+name|e
+operator|.
+name|getCause
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|cause
+operator|!=
+literal|null
+operator|&&
+name|cause
+operator|instanceof
+name|ConnectException
 condition|)
 block|{
 name|doRetry
